fix: fixed spacing issues and prevent user from entering AVA less than 0 on AVA component

--- a/src/app/dashboard/modules/profile-dashboard/components/edit-availability-dialog/edit-availability-dialog.scss
+++ b/src/app/dashboard/modules/profile-dashboard/components/edit-availability-dialog/edit-availability-dialog.scss
@@ -21,4 +21,9 @@ button[mat-flat-button] {
 
 h1[mat-dialog-title] {
   margin: 0;
+  line-height: 1.7;
+}
+
+.icon{
+  padding: 15px;
 }
